--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,19 +1,29 @@
-name: Generate terraform docs
+name: CI
 on:
   pull_request:
     branches: [main]
 
 jobs:
-  docs:
+  lint:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-      with:
-        ref: ${{ github.event.pull_request.head.ref }}
+
+    - name: terraform-validate
+      uses: dflook/terraform-validate@v1.41.2
+
+    - name: Lint Terraform
+      uses: actionshub/terraform-lint@main
+
+  generate-docs:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
 
     - name: Render terraform docs and push changes back to PR
       uses: terraform-docs/gh-actions@main
       with:
+        config-file: .terraform-docs.yml
         working-dir: .
         output-file: README.md
         output-method: inject
