adding ci pipeline

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -60,7 +60,7 @@ jobs:
 
     - name: Merge
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.APPROVER_PAT }}
       run: |
         gh pr merge ${{ steps.cpr.outputs.pull-request-number }} --repo ${{github.repository}} \
           --admin --delete-branch --body "version bump ${{ steps.next-version.outputs.VALUE }}" -s
