chore: improve workflows

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,3 +28,4 @@ jobs:
         output-file: README.md
         output-method: inject
         git-push: "true"
+        git-commit-message: "chore: update terraform docs"
