--- a/.github/workflows/bump-chart.yaml
+++ b/.github/workflows/bump-chart.yaml
@@ -45,7 +45,7 @@ jobs:
         run: |
           git config user.name ${{ github.actor }}
           git config user.email '${{ github.actor }}@users.noreply.github.com'
-          git commit -a -m "bump chart version to '${{ inputs.chart-version }}'"
+          git commit -a -m "chore: bump chart version to '${{ inputs.chart-version }}'"
 
       - name: Create Pull Request
         id: cpr
