--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -66,7 +66,7 @@ jobs:
       run: |
         git config user.name ${{ github.actor }}
         git config user.email '${{ github.actor }}@users.noreply.github.com'
-        git commit -a -m "Update changelog for ${{ github.ref }}"
+        git commit -a -m "chore: Update changelog for ${{ github.ref }}"
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
