--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,13 @@ name: CI
 on:
   pull_request:
     branches: [main]
+  issue_comment:
+    types: [created]
 
 jobs:
+  
   lint:
+    if: github.event_name != 'issue_comment' || contains(github.event.comment.body, '/generate')
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -16,6 +20,7 @@ jobs:
       uses: actionshub/terraform-lint@main
 
   generate-docs:
+    if: github.event_name != 'issue_comment' || contains(github.event.comment.body, '/generate')
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
